# gardener

./: .gitignore  CHANGELOG.md  DESIGN.md  ERKENNTNISSE.md  INSIGHTS.md  KONZEPT.md  README.md  README_de.md  ROADMAP.md  ROADMAP_de.md  ellmos-module.v2.json  gardener.py  i18n.py  llms.txt  pyproject.toml  seed.py  sources.py
.github/workflows/: tests.yml
docs/decisions/: knowledge-index.md
locales/: translations.json
tests/: test_gardener_core.py  test_observe_sources.py
