[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# PyPI name "gardener" is taken (hook-based tree manipulation library),
# therefore the distribution is named gardener-os; the module and the
# console script stay "gardener".
name = "gardener-os"
version = "0.3.1"
description = "Database-centric operating system for LLMs: find, get, put, run on a single SQLite substrate."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lukas Geiger" }]
requires-python = ">=3.10"
keywords = ["llm", "agent", "sqlite", "memory", "operating-system"]

[project.urls]
Repository = "https://github.com/ellmos-ai/gardener"

[project.scripts]
gardener = "gardener:main"

[tool.setuptools]
py-modules = ["gardener", "i18n", "seed", "sources"]
